@@ -16,3 +16,4 @@ repository_at = github
 [Prereqs]
 Any::Moose = 0.11
 namespace::clean = 0.08
+Capture::Tiny = 0.08
