@@ -1,3 +1,5 @@
+		- Switch to using Capture::Tiny for Proc.pm, for Windows
+		  support.
 		- Prevent a warning from Handle.pm during global destruction.
 		- Make Crypt::Random::Source work properly in taint mode.
 
